Fixed margin on mobile for announcement

--- a/app/client/stylesheets/_announcement.scss
+++ b/app/client/stylesheets/_announcement.scss
@@ -19,8 +19,7 @@
 @media only screen and (max-width: 768px) {
   .announcement {
     &.markdown {
-      margin-top: 3em;
-      padding: 0 1rem;
+      margin: 3em 1rem 0 1rem;
     }
   }
 }
